# mlopsdataproject

./: NEWS.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/mlopsdataproject/: __init__.py
src/mlopsdataproject/app/: app.py  run_mlopsdataproject.py
src/mlopsdataproject/ingestion/: download.py
src/mlopsdataproject/plot/: plot_ts.py
tests/: test_sum.py
tests/ingestion/: test_download_data.py
