[project]
name = "mlopsdataproject"
version = "0.1.0.9001"
description = "This is a complete Data Science/MLOps project."
authors = [
    {name = "Mariana Santos",email = "mrds.profissional@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"


[tool.poetry.dependencies]
pandas = "^2.3.3"
yfinance = "^0.2.66"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ipykernel = "^6.25.2"
ipython = "<8.16.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"